<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_eap"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_eap_method"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_eap_method"
                    style="@style/wifi_item_label"
                    android:text="@string/str_eap_method" />

                <Spinner
                    android:id="@+id/sp_eap_method"
                    style="@style/wifi_item_content"
                    android:entries="@array/wifi_eap_method"
                    android:prompt="@string/wifi_eap_method"></Spinner>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_phase2_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_phase2_auth"
                    style="@style/wifi_item_label"
                    android:text="@string/str_phase" />

                <Spinner
                    android:id="@+id/sp_phase2_auth"
                    style="@style/wifi_item_content"
                    android:entries="@array/wifi_phase2_entries"
                    android:prompt="@string/please_select_phase2"></Spinner>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_ca_certificate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_ca_certificate"
                    style="@style/wifi_item_label"
                    android:text="@string/str_ca_certificate" />

                <Spinner
                    android:id="@+id/sp_ca_certificate"
                    style="@style/wifi_item_content"
                    android:prompt="@string/wifi_eap_ca_cert"></Spinner>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_user_certificate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_user_certificate"
                    style="@style/wifi_item_label"
                    android:text="@string/str_user_certificate" />

                <Spinner
                    android:id="@+id/sp_user_certificate"
                    style="@style/wifi_item_content"
                    android:prompt="@string/wifi_eap_user_cert"></Spinner>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_identity"
                    style="@style/wifi_item_label"
                    android:text="@string/str_identity" />

                <EditText
                    android:id="@+id/et_identity"
                    style="@style/wifi_item_content"
                    android:hint="@string/str_hint_identity"
                    android:inputType="textNoSuggestions"></EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_annoymous"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_annoymous"
                    style="@style/wifi_item_label"
                    android:text="@string/str_annoymous" />

                <EditText
                    android:id="@+id/et_annoymous"
                    style="@style/wifi_item_content"
                    android:hint="@string/str_hint_annoymous"
                    android:inputType="textNoSuggestions"></EditText>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_password"
                    style="@style/wifi_item_label"
                    android:text="@string/str_password" />

                <EditText
                    android:id="@+id/et_password"
                    style="@style/wifi_item_content"
                    android:hint="@string/str_hint_password"></EditText>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
